--- a/src/Componentes/Cabecalho.module.css
+++ b/src/Componentes/Cabecalho.module.css
@@ -4,10 +4,11 @@
 }
 
 h1{
-    font-size: 90px;
-    color: rgb(251, 152, 60);
+    font-size: 50px;
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 50px;
+    /* margin-left: 50px; */
+    padding-top: 40px ;
     justify-content: center;
     text-align: center;
 }
